--- a/RSS-React/src/App.css
+++ b/RSS-React/src/App.css
@@ -2,41 +2,68 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  padding-bottom: 0;
   text-align: center;
+  width: 100%;
+  position: relative;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.search_section {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.RMLogo {
+  max-width: 320px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.search_input {
+  border: 1.7px solid rgba(124, 124, 124);
+  margin: 10px;
+  padding: 6px;
+  font-size: 16px;
+}
+
+.search_btn {
+  margin: 10px;
+}
+
+.card_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .card {
-  padding: 2em;
+  background-color: rgba(255, 255, 255, 0.3);
+  border: solid 2px rgb(17, 109, 146);
+  border-radius: 10px;
+  margin: 10px;
+  padding: 16px;
+  width: 260px;
+  transition: border-color 0.25s;
+}
+.card:hover {
+  border-color: rgb(0, 183, 255);
 }
 
-.read-the-docs {
-  color: #888;
+.card p {
+  margin: 0;
 }
+
+.card_info {
+  display: flex;
+  flex-direction: column;
+}
+
+.card_img {
+  max-width: 260px;
+}
+
+.RickAndMorty {
+  position: absolute;
+  bottom: 0;
+  max-width: 300px;
+}
+
