--- a/RSS-React/src/styles/App.css
+++ b/RSS-React/src/styles/App.css
@@ -1,6 +1,4 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
   padding-bottom: 0;
   text-align: center;
@@ -8,56 +6,31 @@
   position: relative;
 }
 
+.wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
 header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  font-size: 20px;
+}
+
+header::after {
+  font-weight: 800;
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 0px;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(91deg,transparent 0%, rgb(7, 173, 176) 67%);;
 }
 
 .RMLogo {
-  max-width: 320px;
-}
-
-.search_input {
-  border: 1.7px solid rgba(124, 124, 124);
-  margin: 10px;
-  padding: 6px;
-  font-size: 16px;
-}
-
-.search_btn {
-  margin: 10px;
-}
-
-.card_container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.card {
-  background-color: rgba(255, 255, 255, 0.3);
-  border: solid 2px rgb(17, 109, 146);
-  border-radius: 10px;
-  margin: 10px;
-  padding: 16px;
-  width: 260px;
-  transition: border-color 0.25s;
-}
-.card:hover {
-  border-color: rgb(0, 183, 255);
-}
-
-.card p {
-  margin: 0;
-}
-
-.card_info {
-  display: flex;
-  flex-direction: column;
-}
-
-.card_img {
   max-width: 260px;
 }
 
@@ -67,3 +40,12 @@ header {
   max-width: 300px;
 }
 
+.RM_home {
+  position: absolute;
+  bottom: 0;
+  max-width: 300px;
+}
+
+.dont_panic {
+  max-width: 400px;
+}
