--- a/RSS-React/src/styles/index.css
+++ b/RSS-React/src/styles/index.css
@@ -18,9 +18,25 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  padding: 0 30px;
 }
 a:hover {
   color: #535bf2;
+}
+
+.active {
+  font-weight: 800;
+  position: relative;
+}
+.active::after {
+  font-weight: 800;
+  position: absolute;
+  content: '';
+  left: 22px;
+  bottom: -6px;
+  width: 60%;
+  height: 2px;
+  background-color: #535bf2;
 }
 
 body {
@@ -40,6 +56,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 10px;
 }
 button:hover {
   border-color: #646cff;
