--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,3 +49,9 @@ header::after {
 .dont_panic {
   max-width: 400px;
 }
+
+.buttons_holder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
