--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,6 +66,20 @@ button:disabled {
   cursor: default;
 }
 
+select {
+  border-radius: 8px;
+  width: 60px;
+  height: 30px;
+  margin: 12px;
+  font-size: 1em;
+  border: 2px solid #cfcfcf;
+  transition: border-color 0.25s;
+  background-color: #fff;
+}
+select:hover {
+  border-color: #646cff;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
