--- a/src/index.css
+++ b/src/index.css
@@ -25,14 +25,14 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  margin: 0;
+  font-size: 2.2em;
+  line-height: 0.1;
 }
 
 button {
